SERVER-67624 Fix ABT Translation for MatchExpressions comparing with Min/MaxKey