jstests/core/type_bracket.js
@@ -2,6 +2,7 @@
 "use strict";
 
 load('jstests/aggregation/extras/utils.js');  // For assertArrayEq
+load('jstests/libs/optimizer_utils.js');      // For checkCascadesOptimizerEnabled
 
 const t = db.type_bracket;
 t.drop();
@@ -49,7 +50,7 @@ const runTest = (filter, expected) => {
         expected: expected,
     });
 };
-const tests = [
+let tests = [
     // Number
     {filter: {a: {$gt: NumberInt(0)}}, expected: [docs[2], docs[3], docs[4], docs[7], docs[15]]},
     {filter: {a: {$lte: 0}}, expected: [docs[30]]},
@@ -104,12 +105,6 @@ const tests = [
         expected: [docs[12], docs[16], docs[20], docs[22]]
     },
 
-    // MaxKey
-    // TODO SERVER-67624 Uncomment after fixing translations for match exprs against MinKey/MaxKey
-    // TODO SERVER-67853 Uncomment after fixing ABT Translation for comparing GTE and LTE min/maxkey
-    // {filter: {a: {$lte: MaxKey()}}, expected: docs},
-    // {filter: {a: {$gte: MaxKey()}}, expected: docs[docs.length - 1]},
-
     // CODEWSCOPE
     {filter: {a: {$gte: new Code('function() {x++;}', {})}}, expected: [docs[24]]},
     {filter: {a: {$lt: new Code('x', {})}}, expected: [docs[25]]},
@@ -119,6 +114,24 @@ const tests = [
     {filter: {a: {$lte: new Code("")}}, expected: []},
 
 ];
+
+// Include Min/MaxKey type bracketing tests conditional on using CQF.
+// TODO SERVER-68274: Always include these testcases once SBE correctly handles the semantics of
+// missing fields and type bracketing (missing field is implicitly null which is greater than
+// MinKey).
+if (checkCascadesOptimizerEnabled(db)) {
+    tests.push(
+        // MinKey
+        {filter: {a: {$gte: MinKey()}}, expected: docs},
+        {filter: {a: {$gt: MinKey()}}, expected: docs.slice(1)},
+        {filter: {a: {$lte: MinKey()}}, expected: [docs[0]]},
+        {filter: {a: {$lt: MinKey()}}, expected: []},
+        // MaxKey
+        {filter: {a: {$lte: MaxKey()}}, expected: docs},
+        {filter: {a: {$lt: MaxKey()}}, expected: docs.slice(0, 31)},
+        {filter: {a: {$gte: MaxKey()}}, expected: [docs[31]]},
+        {filter: {a: {$gt: MaxKey()}}, expected: []});
+}
 
 const hasTestCommandsEnabled =
     assert.commandWorked(db.adminCommand({getParameter: 1, enableTestCommands: 1}))
